@@ -85,4 +85,11 @@ evalqOnLoad({
     setMethod("Compare", signature(e1 = "Rcpp_bdtPt", e2 = "Rcpp_bdtPt"),
               function(e1, e2) compare_bdtPt_bdtPt(e1, e2, .Generic))
 
+    setMethod("Compare", signature(e1 = "Rcpp_bdtDt", e2 = "Rcpp_bdtDt"),
+              function(e1, e2) compare_bdtDt_bdtDt(e1, e2, .Generic))
+    setMethod("Compare", signature(e1 = "Rcpp_bdtDt", e2 = "Date"),
+              function(e1, e2) compare_bdtDt_bdtDt(e1, new(bdtDt, e2), .Generic))
+#    setMethod("Compare", signature(e1 = "Date", e2 = "Rcpp_bdtDt"), ,
+#              function(e1, e2) compare_bdtDt_bdtDt(new(bdtDt, e1), e2, .Generic))
+
 })
