@@ -77,6 +77,7 @@ public:
 private:
     boost::gregorian::date m_dt; 			// private Boost date instance
 
+    friend bool compare_bdtDt_bdtDt(const bdtDt&, const bdtDt&, std::string);
 };
 
 #endif
