@@ -5,6 +5,8 @@
 	on Rcpp::wrap() for conversion, rather than always directly converting
 	* src/RcppBDTdt.cpp: Idem
 
+	* src/RcppBDTdt.cpp: Comparison support for bdtDt type
+
 	* man/bdtDu.Rd: Document new methods for Arithmetic and Comparison
 	* man/bdtPt.Rd: Idem
 
